# advent-of-code

./: README.md
2021/aoc2021/: Cargo.toml
2021/aoc2021/benches/: aoc_benchmark.rs
2021/aoc2021/src/: lib.rs  main.rs
2021/aoc2021/src/day1/: mod.rs
2021/aoc2021/src/day10/: mod.rs
2021/aoc2021/src/day11/: mod.rs
2021/aoc2021/src/day12/: mod.rs
2021/aoc2021/src/day13/: mod.rs
2021/aoc2021/src/day14/: mod.rs
2021/aoc2021/src/day16/: mod.rs  oldmod.rs
2021/aoc2021/src/day2/: mod.rs
2021/aoc2021/src/day3/: mod.rs
2021/aoc2021/src/day4/: mod.rs
2021/aoc2021/src/day5/: mod.rs
2021/aoc2021/src/day6/: mod.rs
2021/aoc2021/src/day7/: mod.rs
2021/aoc2021/src/day8/: mod.rs
2021/aoc2021/src/day9/: mod.rs
2021/aoc2021/src/intshark/: mod.rs
2021/aoc2021/src/template/: mod.rs
2022/aoc2022/: Cargo.toml
2022/aoc2022/.cargo/: cargo.toml
2022/aoc2022/benches/: aoc_benchmark.rs
2022/aoc2022/src/: lib.rs  main.rs
2022/aoc2022/src/aoc_macros/: mod.rs
2022/aoc2022/src/common/: mod.rs
2022/aoc2022/src/exercises/day1/: mod.rs
2022/aoc2022/src/exercises/day10/: mod.rs
2022/aoc2022/src/exercises/day11/: mod.rs
2022/aoc2022/src/exercises/day15/: mod.rs
2022/aoc2022/src/exercises/day17/: mod.rs
2022/aoc2022/src/exercises/day2/: mod.rs
2022/aoc2022/src/exercises/day20/: mod.rs
2022/aoc2022/src/handheld/: mod.rs  old_mod.rs
2024/aoc2024/: Cargo.toml
2024/aoc2024/benches/: aoc_benchmark.rs
2024/aoc2024/src/: lib.rs  main.rs
2024/aoc2024/src/common/: mod.rs
2024/aoc2024/src/exercises/: mod.rs
2024/aoc2024/src/toboggan/: mod.rs
(+112 files in other folders)
