[package]
name = "aoc2021"
version = "0.1.0"
authors = ["jrittle <jrittle@cisco.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
hex = "0.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "aoc_benchmark"
harness = false