[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {git = "https://github.com/clap-rs/clap", features = ["derive"]}
simple_logger = "4.0"
log = "0.4"
anyhow = "1"
regex = "1"

[dev-dependencies]
criterion = "0.3"